--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body{
         background-color: floralwhite;
         display: flex;
         flex-direction: column;
-        height: 100vh;
         align-items: center;
         justify-content: space-around;
     }
@@ -27,7 +26,7 @@ main{
     flex-direction: column;
     align-items: center;
     max-width: 600px;
-    max-height: 500px;
+
     background-color: #fff;
     border-radius: 1rem;
     box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.404);
@@ -83,6 +82,33 @@ main p {
    text-decoration:  line-through solid rgb(0, 0, 0);
 }
 
-nav{
-    font-size: 20px;
+.footerP {
+    width: 50%;
 }
+
+footer {
+    padding: 50px;
+    margin-top: 200px;
+    display: flex;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.781);
+}
+
+footer article {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+footer img{
+    width: 100px;
+    height: 100px;
+}
+
+.conterinetRepo {
+    display: flex;
+    justify-content: center;
+    margin: 50px;
+}
+
+
+
